--- a/01_Math-Concepts-for-Developers/Exam_project_v1.ipynb
+++ b/01_Math-Concepts-for-Developers/Exam_project_v1.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"baner.png\" alt=\"Image description\" width=\"800\" />"
+    "<img src=\"clipart/baner.png\" alt=\"Image description\" width=\"800\" />"
    ]
   },
   {
